--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,7 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+ @import "tailwindcss";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
